# MCCManager

./: .gitignore  README.md  index.html  package-lock.json  package.json  update.py  version.json  vite.config.js
.github/workflows/: build-ci.yml
src/: App.vue  main.js  router.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/Includes/: configHandler.js  publicFunc.js
src/components/: AnimationSpan26.vue  CustomTitleBar.vue  LaunchButton.vue  LaunchIcon.vue  LittleText.vue  MenubarButton.vue  MenubarSquareButton.vue  NoteText.vue  SettingItemButton.vue  SettingItemCard.vue  SettingsBackButton.vue  SettingsItemButton.vue  SettingsItemGroup.vue  TitleBarButton.vue  TitleText.vue
src/components/icons/: IconAbout.vue  IconArrowDown.vue  IconArrowLeft.vue  IconArrowRight.vue  IconArrowUp.vue  IconBackArrow.vue  IconClose.vue  IconCore.vue  IconDonate.vue  IconDownload.vue  IconInfo.vue  IconInsider.vue  IconLang.vue  IconLaunchFailed.vue  IconLaunchFinish.vue  IconMinimize.vue  IconMoon.vue  IconNextArrow.vue  IconProfile.vue  IconSetting.vue  IconShare.vue  IconSun.vue  IconTask.vue
src/pages/: Home.vue  Settings.vue
src/pages/settings/: 1Support.vue  2Profile.vue  2sAccount.vue  2sMCC_Config.vue  3Core.vue  4Lang.vue  5Insider.vue  6Donate.vue  7About.vue
